# poetry-test-dependent-on-lfs-package

./: README.md  pyproject.toml
