[tool.poetry]
name = "poetry-test-dependent-on-lfs-package"
version = "0.1.0"
description = "This is a poetry package that requires the test package poetry-test-lfs."
authors = ["Arktur <arktur@github.com>"]
packages = [
    { include = "test-dependent-on-lfs-package" },
]

[tool.poetry.dependencies]
python = "^3.8"
poetry-test-lfs = {git = "https://github.com/archtur/poetry-test-lfs.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
